--- a/src/components/Clock/Analog.css
+++ b/src/components/Clock/Analog.css
@@ -44,3 +44,52 @@
     left: calc(50% - 0.5px); /* Устанавливаем секундную стрелку в центр */
     bottom: 100px;
 }
+
+
+/*// пояснение  //*/
+/*   .clock {*/
+/*       position: relative;*/
+/*       width: 300px; !* Измените ширину часов *!*/
+/*       height: 300px; !* Измените высоту часов *!*/
+/*       border: 2px solid #000;*/
+/*       border-radius: 50%;*/
+/*   }*/
+
+/*.hour-hand,*/
+/*.minute-hand,*/
+/*.second-hand {*/
+/*    position: absolute;*/
+/*    background-color: #000;*/
+/*    transform-origin: center bottom;*/
+/*}*/
+
+/*.hour-hand {*/
+/*    width: 6px; !* Измените толщину часовой стрелки *!*/
+/*    height: 80px; !* Измените длину часовой стрелки *!*/
+/*}*/
+
+/*.minute-hand {*/
+/*    width: 4px; !* Измените толщину минутной стрелки *!*/
+/*    height: 120px; !* Измените длину минутной стрелки *!*/
+/*}*/
+
+/*.second-hand {*/
+/*    width: 2px; !* Измените толщину секундной стрелки *!*/
+/*    height: 140px; !* Измените длину секундной стрелки *!*/
+/*    background-color: red; !* Цвет секундной стрелки *!*/
+/*}*/
+
+/*.hour-hand {*/
+/*    left: calc(50% - 3px); !* Измените смещение часовой стрелки по горизонтали *!*/
+/*    bottom: 150px; !* Измените смещение часовой стрелки по вертикали *!*/
+/*}*/
+
+/*.minute-hand {*/
+/*    left: calc(50% - 2px); !* Измените смещение минутной стрелки по горизонтали *!*/
+/*    bottom: 150px; !* Измените смещение минутной стрелки по вертикали *!*/
+/*}*/
+
+/*.second-hand {*/
+/*    left: calc(50% - 1px); !* Измените смещение секундной стрелки по горизонтали *!*/
+/*    bottom: 150px; !* Измените смещение секундной стрелки по вертикали *!*/
+/*}*/
